Debts solutions pages added

--- a/bankruptcy.html
+++ b/bankruptcy.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
+        <meta name="keywords" content="debt management, DRO, dro, IVA, iva, individual voluntary arrangement, ">
         <title>Make Me Debt Free</title>
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Bootstrap icons-->
@@ -17,6 +18,7 @@
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
         <link href="css/custom-des.css" rel="stylesheet"/>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     </head>
     <body id="page-top">
         <!-- Navigation-->
@@ -35,44 +37,53 @@
                     <a class="btn btn-primary rounded-pill px-3 mb-2 mb-lg-0" href="/#contact">
                         <span class="d-flex align-items-center">
                             <i class="bi-phone me-2"></i>
-                            <span class="small">Book a call</span>
+                            <span class="">Book a call</span>
                         </span>
                     </a>
                 </div>
             </div>
         </nav>
-        <!-- App features section-->
-        <section id="features">
+        <!-- Basic features section-->
+        <section class="bg-light">
+            <h1 class="display-3 text-center bg-gradient-primary-to-secondary p-5 text-white">Bankruptcy</h1>
             <div class="container px-5">
-                <div class="row gx-5 align-items-center">
-                    <div class="col-lg-8 order-lg-1 mb-5 mb-lg-0 mx-auto">
-                        <div class="container-fluid px-5">
-                            <div class="row gx-5">
-                                <div class="col mt-5 mb-5">
-                                    <!-- Feature item-->
-                                    <div class="text-center">
-                                        <h1><i class="bi-check-circle icon-feature text-gradient d-block mb-3" height="9rem"></i></h1>
-                                        <h3 class="font-alt">Great! You have successfully booked a call.</h3>
-                                        <p class="text-muted mb-0">You will get a call from one of our experts.</p>
-                                    </div>
-                                </div>
-                            </div>
+                <p class=" lead fw-normal text-center text-muted mb-5">Our free advice can tell you whether bankruptcy is the right solution for you.</p>
+                <div class="row gx-5 align-items-start justify-content-center justify-content-lg-between">
+                    <p>Bankruptcy is a form of insolvency that writes off debts if you can't afford to repay them, giving you a fresh start. It's a legal process that's suitable if you have little hope of repaying your debts in a reasonable amount of time.</p>
+                    <p>When you make yourself bankrupt nearly all your unsecured debts are written off, which lets you make a fresh start. In some cases, your creditors can choose to make you bankrupt. However, bankruptcy has serious implications and shouldn't be undertaken lightly</p>
+                    <p>With combined experience of over 25 years offering free debt advice, we'll work with you to see if bankruptcy is the right solution for you. We'll also consider a wide range of other solutions that could be suitable for your situation.</p>
+                    
+                    <div class="col-12 col-lg-6">
+                        <h3 class="display-6">Benefits of a Bankruptcy</h3>
+                        <ul class="fw-normal mb-5 mb-lg-0">
+                            <li>Your unsecured debts will be written off, giving you a fresh start</li>
+                            <li>Your creditors can't take any further legal action against you to recover your debts</li>
+                            <li>They must also stop demanding payment, charging interest and adding other charges</li>
+                            <li>You won't receive any further contact from your creditors</li>
+                        </ul>
+                    </div>
+                    <div class="col-12 col-lg-6">
+                        <h3 class="display-6">Risks of a Bankruptcy</h3>
+                        <ul class="fw-normal mb-5 mb-lg-0">
+                            <li>Assets such as your home or vehicle may be included in your bankruptcy</li>
+                                <li>Some jobs are affected, such as legal or financial roles</li>
+                                <li>Bankruptcy will have a negative impact on your credit file and appear on it for six years</li>
+                                <li>Your bankruptcy will be recorded on a public register</li>
+                        </ul>
+                    </div>
+                    <div class="row mt-4 justify-content-center align-items-center">
+                        <p class="lead text-center fw-normal">Still got doubts? Get an expert advice. Book a call now!</p>
+                        <div class="col-3 text-center">
+                            <a class="btn btn-primary rounded-pill px-3 mb-2 mb-lg-0" href="/#contact">
+                                <span class="d-flex align-items-center">
+                                    <span class="lead fw-normal">Book a call</span>
+                                </span>
+                            </a>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
-        <!-- Mashead header-->
-        <!-- Quote/testimonial aside-->
-        <aside class="text-center bg-gradient-primary-to-secondary">
-            <div class="container px-5">
-                <div class="row gx-5 justify-content-center">
-                    <div class="col-xl-11">
-                        <img src="assets/img/mmdf.png" alt="Make Mee Debt Free Logo" style="height: 6rem" />
-                    </div>
-                </div>
-            </div>
-        </aside>
         <!-- Footer-->
         <footer class="bg-black py-5">
             <div class="container px-5">
