--- a/debt-relief-order.html
+++ b/debt-relief-order.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
+        <meta name="keywords" content="debt management, DRO, dro, IVA, iva, individual voluntary arrangement, ">
         <title>Make Me Debt Free</title>
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Bootstrap icons-->
@@ -17,6 +18,7 @@
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
         <link href="css/custom-des.css" rel="stylesheet"/>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     </head>
     <body id="page-top">
         <!-- Navigation-->
@@ -35,44 +37,51 @@
                     <a class="btn btn-primary rounded-pill px-3 mb-2 mb-lg-0" href="/#contact">
                         <span class="d-flex align-items-center">
                             <i class="bi-phone me-2"></i>
-                            <span class="small">Book a call</span>
+                            <span class="">Book a call</span>
                         </span>
                     </a>
                 </div>
             </div>
         </nav>
-        <!-- App features section-->
-        <section id="features">
+        <!-- Basic features section-->
+        <section class="bg-light">
+            <h1 class="display-3 text-center bg-gradient-primary-to-secondary p-5 text-white">Debt relief order (DRO)</h1>
             <div class="container px-5">
-                <div class="row gx-5 align-items-center">
-                    <div class="col-lg-8 order-lg-1 mb-5 mb-lg-0 mx-auto">
-                        <div class="container-fluid px-5">
-                            <div class="row gx-5">
-                                <div class="col mt-5 mb-5">
-                                    <!-- Feature item-->
-                                    <div class="text-center">
-                                        <h1><i class="bi-check-circle icon-feature text-gradient d-block mb-3" height="9rem"></i></h1>
-                                        <h3 class="font-alt">Great! You have successfully booked a call.</h3>
-                                        <p class="text-muted mb-0">You will get a call from one of our experts.</p>
-                                    </div>
-                                </div>
-                            </div>
+                <p class=" lead fw-normal text-center text-muted mb-5">A debt relief order (DRO) is a way to have your debts written off if you have a relatively low level of debt and have few assets.</p>
+                <div class="row gx-5 align-items-start justify-content-center justify-content-lg-between">
+                    <p>A DRO freezes your debt repayments and interest for 12 months. If your financial situation hasn't changed at the end of this period then all of the debts included will be written off.</p>
+                    
+                    <div class="col-12 col-lg-6">
+                        <h3 class="display-6">Benefits of an DRO</h3>
+                        <ul class="fw-normal mb-5 mb-lg-0">
+                            <li>A debt relief order can be a low-cost alternative to bankruptcy</li>
+                            <li>You don't pay anything towards your debts for 12 months. After that they'll be written off</li>
+                            <li>Your creditors can't pursue you for your debts during the 12 month period</li>
+                            <li>Although a DRO is a formal debt solution, you don't need to appear in court</li>
+                        </ul>
+                    </div>
+                    <div class="col-12 col-lg-6">
+                        <h3 class="display-6">Risks of an DRO</h3>
+                        <ul class="fw-normal mb-5 mb-lg-0">
+                            <li>A DRO is only available if you owe £20,000 to £30,000 and live in England, Wales or Northern Ireland</li>
+                            <li>You'll need to pay the Insolvency Service a one-off fee of £90. If you qualify, our specialist team can help you apply</li>
+                            <li>You can't apply if you're a homeowner</li>
+                            <li>A DRO will appear on a public register and will affect your credit report negatively</li>
+                        </ul>
+                    </div>
+                    <div class="row mt-4 justify-content-center align-items-center">
+                        <p class="lead text-center fw-normal">Still got doubts? Get an expert advice. Book a call now!</p>
+                        <div class="col-3 text-center">
+                            <a class="btn btn-primary rounded-pill px-3 mb-2 mb-lg-0" href="/#contact">
+                                <span class="d-flex align-items-center">
+                                    <span class="lead fw-normal">Book a call</span>
+                                </span>
+                            </a>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
-        <!-- Mashead header-->
-        <!-- Quote/testimonial aside-->
-        <aside class="text-center bg-gradient-primary-to-secondary">
-            <div class="container px-5">
-                <div class="row gx-5 justify-content-center">
-                    <div class="col-xl-11">
-                        <img src="assets/img/mmdf.png" alt="Make Mee Debt Free Logo" style="height: 6rem" />
-                    </div>
-                </div>
-            </div>
-        </aside>
         <!-- Footer-->
         <footer class="bg-black py-5">
             <div class="container px-5">
