--- a/equity-release-advice.html
+++ b/equity-release-advice.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
+        <meta name="keywords" content="debt management, DRO, dro, IVA, iva, individual voluntary arrangement, ">
         <title>Make Me Debt Free</title>
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Bootstrap icons-->
@@ -17,6 +18,7 @@
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
         <link href="css/custom-des.css" rel="stylesheet"/>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     </head>
     <body id="page-top">
         <!-- Navigation-->
@@ -35,44 +37,56 @@
                     <a class="btn btn-primary rounded-pill px-3 mb-2 mb-lg-0" href="/#contact">
                         <span class="d-flex align-items-center">
                             <i class="bi-phone me-2"></i>
-                            <span class="small">Book a call</span>
+                            <span class="">Book a call</span>
                         </span>
                     </a>
                 </div>
             </div>
         </nav>
-        <!-- App features section-->
-        <section id="features">
+        <!-- Basic features section-->
+        <section class="bg-light">
+            <h1 class="display-3 text-center bg-gradient-primary-to-secondary p-5 text-white">Equity Release Advice</h1>
             <div class="container px-5">
-                <div class="row gx-5 align-items-center">
-                    <div class="col-lg-8 order-lg-1 mb-5 mb-lg-0 mx-auto">
-                        <div class="container-fluid px-5">
-                            <div class="row gx-5">
-                                <div class="col mt-5 mb-5">
-                                    <!-- Feature item-->
-                                    <div class="text-center">
-                                        <h1><i class="bi-check-circle icon-feature text-gradient d-block mb-3" height="9rem"></i></h1>
-                                        <h3 class="font-alt">Great! You have successfully booked a call.</h3>
-                                        <p class="text-muted mb-0">You will get a call from one of our experts.</p>
-                                    </div>
-                                </div>
-                            </div>
+                <p class=" lead fw-normal text-center text-muted mb-5">At Make Me Debt Free Financial Solutions our expert team can help you release equity in your home with no need to move.</p>
+                <div class="row gx-5 align-items-start justify-content-center justify-content-lg-between">
+                    <p>Equity release allows you to access the money tied up in your home if you're aged 55+. You can take a tax-free cash lump sum or access flexible borrowing whether you're planning home improvements, managing debt or supplementing your retirement income. </p>
+                    
+                    <div class="col-12 col-lg-6">
+                        <h3 class="display-6">Benefits of a Equity Release</h3>
+                        <ul class="fw-normal mb-5 mb-lg-0">
+                            <li>You'll have tax-free cash to spend however you like</li>
+                            <li>You get to stay in your own home</li>
+                            <li>You won't have to make any monthly repayments unless you want to</li>
+                            <li>You'll never owe more than the value of your home</li>
+                            <li>You'll have access to low interest rates</li>
+                            <li>You can access the money when you need it</li>
+                            <li>You could avoid paying inheritance tax</li>
+                        </ul>
+                    </div>
+                    <div class="col-12 col-lg-6">
+                        <h3 class="display-6">Risks of a Equity Release</h3>
+                        <ul class="fw-normal mb-5 mb-lg-0">
+                            <li>Your debt is increased by interest</li>
+                            <li>Your benefits might be affected</li>
+                            <li>You might be subjected to early exit fees</li>
+                            <li>You can't leave your home as an inheritance</li>
+                            <li>You have to pay set up fees</li>
+                            <li>You won't be able to take out another loan against your house</li>
+                        </ul>
+                    </div>
+                    <div class="row mt-4 justify-content-center align-items-center">
+                        <p class="lead text-center fw-normal">Still got doubts? Get an expert advice. Book a call now!</p>
+                        <div class="col-3 text-center">
+                            <a class="btn btn-primary rounded-pill px-3 mb-2 mb-lg-0" href="/#contact">
+                                <span class="d-flex align-items-center">
+                                    <span class="lead fw-normal">Book a call</span>
+                                </span>
+                            </a>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
-        <!-- Mashead header-->
-        <!-- Quote/testimonial aside-->
-        <aside class="text-center bg-gradient-primary-to-secondary">
-            <div class="container px-5">
-                <div class="row gx-5 justify-content-center">
-                    <div class="col-xl-11">
-                        <img src="assets/img/mmdf.png" alt="Make Mee Debt Free Logo" style="height: 6rem" />
-                    </div>
-                </div>
-            </div>
-        </aside>
         <!-- Footer-->
         <footer class="bg-black py-5">
             <div class="container px-5">
