--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
         <link href="css/custom-des.css" rel="stylesheet"/>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     </head>
     <body id="page-top">
         <!-- Navigation-->
@@ -36,7 +37,7 @@
                     <a class="btn btn-primary rounded-pill px-3 mb-2 mb-lg-0" href="/#contact">
                         <span class="d-flex align-items-center">
                             <i class="bi-phone me-2"></i>
-                            <span class="small">Book a call</span>
+                            <span class="">Book a call</span>
                         </span>
                     </a>
                 </div>
@@ -274,7 +275,7 @@
                     <div class="col-lg-3 col-md-4">
                         <p class="text-white">BROWSE</p>
                         <ul class="list-unstyled">
-                            <li class=""><a href="/#about" class="">About</a></li>
+                            <li><a href="/#about">About</a></li>
                             <li><a href="/faq.html">FAQ</a></li>
                             <li><a href="/privacy-policy.html">Privacy Policy</a></li>
                         </ul>
@@ -284,10 +285,15 @@
                         <p class="text-white-50">Make Me Debt Free is a company which provides debts advice and solutions. We are in colaboration with different companies and organisations.</p>
                     </div>
                     <div class="col-lg-4 col-md-6">
-                        <p class="text-white">CONTACT INFORMATION</p>
-                        <br>
-                        <p></p>
-    
+                        <p class="text-white">DEBT SOLUTIONS</p>
+                        <ul class="list-unstyled text-white-50">
+                            <li><a href="individual-voluntary-arrangement-iva.html">IVA - Individual Voluntary Arrangement</a></li>
+                            <li><a href="debt-management-plan.html">DMP - Debt Management Plan</a></li>
+                            <li><a href="debt-relief-order.html">DRO - Debt Relief Order</a></li>
+                            <li><a href="protected-trust-deed.html">Protected Trust Deed</a></li>
+                            <li><a href="equity-release-advice.html">Equity Release Advice</a></li>
+                            <li><a href="bankruptcy.html">Bankruptcy</a></li>
+                        </ul>
                     </div>
                 </div>
                 <div class="text-white-50 small text-center">
