--- a/individual-voluntary-arrangement-iva.html
+++ b/individual-voluntary-arrangement-iva.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
+        <meta name="keywords" content="debt management, DRO, dro, IVA, iva, individual voluntary arrangement, ">
         <title>Make Me Debt Free</title>
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Bootstrap icons-->
@@ -17,6 +18,7 @@
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
         <link href="css/custom-des.css" rel="stylesheet"/>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     </head>
     <body id="page-top">
         <!-- Navigation-->
@@ -35,44 +37,57 @@
                     <a class="btn btn-primary rounded-pill px-3 mb-2 mb-lg-0" href="/#contact">
                         <span class="d-flex align-items-center">
                             <i class="bi-phone me-2"></i>
-                            <span class="small">Book a call</span>
+                            <span class="">Book a call</span>
                         </span>
                     </a>
                 </div>
             </div>
         </nav>
-        <!-- App features section-->
-        <section id="features">
+        <!-- Basic features section-->
+        <section class="bg-light">
+            <h1 class="display-3 text-center bg-gradient-primary-to-secondary p-5 text-white">Individual voluntary arrangement (IVA)</h1>
             <div class="container px-5">
-                <div class="row gx-5 align-items-center">
-                    <div class="col-lg-8 order-lg-1 mb-5 mb-lg-0 mx-auto">
-                        <div class="container-fluid px-5">
-                            <div class="row gx-5">
-                                <div class="col mt-5 mb-5">
-                                    <!-- Feature item-->
-                                    <div class="text-center">
-                                        <h1><i class="bi-check-circle icon-feature text-gradient d-block mb-3" height="9rem"></i></h1>
-                                        <h3 class="font-alt">Great! You have successfully booked a call.</h3>
-                                        <p class="text-muted mb-0">You will get a call from one of our experts.</p>
-                                    </div>
-                                </div>
-                            </div>
+                <p class=" lead fw-normal text-center text-muted mb-5">An IVA could allow you to make affordable repayments to your debts over a fixed period, with the remaining debt written off at the end.</p>
+                <div class="row gx-5 align-items-start justify-content-center justify-content-lg-between">
+                    <p>An individual voluntary arrangement (IVA) is a formal agreement allowing you to make affordable payments to your debts, usually over five or six years. At the end of your IVA any unsecured debt left is written off. You can also make a one-off payment known as a lump-sum IVA.</p>
+                    
+                    <div class="col-12 col-lg-6">
+                        <h3 class="display-6">Benefits of an IVA</h3>
+                        <ul class="fw-normal mb-5 mb-lg-0">
+                            <li>You make affordable monthly payments, usually over five or six years</li>
+                            <li>If you're a homeowner you'll usually be able to keep your home, as long as you maintain the mortgage payments and any secured loans on your property</li>
+                            <li>There are no set up fees to be paid before your IVA is agreed</li>
+                            <li>There are fees once your IVA is in progress, but these will be included in your monthly repayments and are set by your creditors</li>
+                            <li>If you have a lump sum to offer, this can be paid as a one-off ‘full and final' settlement, or a combination of a lump sum payment followed by monthly payments</li>
+                            <li>Once you've made your final payment any remaining unsecured debt is written off and your creditors can't pursue you for payments</li>
+                        </ul>
+                    </div>
+                    <div class="col-12 col-lg-6">
+                        <h3 class="display-6">Risks of an IVA</h3>
+                        <ul class="fw-normal mb-5 mb-lg-0">
+                            <li>If there's equity in your home, you'll need to try to re-mortgage which may result in a higher interest rate</li>
+                            <li>If you're unable to re-mortgage you can make a maximum of 12 extra payments or a third party can offer a sum equivalent to the equity</li>
+                            <li>If your IVA fails, creditors may request the supervisor of your IVA petitions for your bankruptcy</li>
+                            <li>Your credit rating will be negatively affected</li>
+                            <li>Your creditors may not approve your IVA</li>
+                            <li>At the end of your IVA, only unsecured debts included will be written off, any not included will remain outstanding</li>
+                            <li>Your IVA will be recorded on a public register</li>
+                            <li>Once your IVA is set up your spending will be restricted until the IVA comes to an end</li>
+                        </ul>
+                    </div>
+                    <div class="row mt-4 justify-content-center align-items-center">
+                        <p class="lead text-center fw-normal">Still got doubts? Get an expert advice. Book a call now!</p>
+                        <div class="col-3 text-center">
+                            <a class="btn btn-primary rounded-pill px-3 mb-2 mb-lg-0" href="/#contact">
+                                <span class="d-flex align-items-center">
+                                    <span class="lead fw-normal">Book a call</span>
+                                </span>
+                            </a>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
-        <!-- Mashead header-->
-        <!-- Quote/testimonial aside-->
-        <aside class="text-center bg-gradient-primary-to-secondary">
-            <div class="container px-5">
-                <div class="row gx-5 justify-content-center">
-                    <div class="col-xl-11">
-                        <img src="assets/img/mmdf.png" alt="Make Mee Debt Free Logo" style="height: 6rem" />
-                    </div>
-                </div>
-            </div>
-        </aside>
         <!-- Footer-->
         <footer class="bg-black py-5">
             <div class="container px-5">
