--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -577,22 +577,27 @@
         <div class="container px-5">
             <div class="row justify-content-lg-between">
                 <div class="col-lg-3 col-md-4">
-                    <p class="text-warning">BROWSE</p>
+                    <p class="text-white">BROWSE</p>
                     <ul class="list-unstyled">
-                        <li class=""><a href="/#about" class="">About</a></li>
+                        <li><a href="/#about">About</a></li>
                         <li><a href="/faq.html">FAQ</a></li>
                         <li><a href="/privacy-policy.html">Privacy Policy</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-3 col-md-4">
-                    <p class="text-warning">ABOUT US</p>
+                    <p class="text-light">ABOUT US</p>
                     <p class="text-white-50">Make Me Debt Free is a company which provides debts advice and solutions. We are in colaboration with different companies and organisations.</p>
                 </div>
                 <div class="col-lg-4 col-md-6">
-                    <p class="text-warning">CONTACT INFORMATION</p>
-                    <br>
-                    <p></p>
-
+                    <p class="text-white">DEBT SOLUTIONS</p>
+                    <ul class="list-unstyled text-white-50">
+                        <li><a href="individual-voluntary-arrangement-iva.html">IVA - Individual Voluntary Arrangement</a></li>
+                        <li><a href="debt-management-plan.html">DMP - Debt Management Plan</a></li>
+                        <li><a href="debt-relief-order.html">DRO - Debt Relief Order</a></li>
+                        <li><a href="protected-trust-deed.html">Protected Trust Deed</a></li>
+                        <li><a href="equity-release-advice.html">Equity Release Advice</a></li>
+                        <li><a href="bankruptcy.html">Bankruptcy</a></li>
+                    </ul>
                 </div>
             </div>
             <div class="text-white-50 small text-center">
