--- a/protected-trust-deed.html
+++ b/protected-trust-deed.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
+        <meta name="keywords" content="debt management, DRO, dro, IVA, iva, individual voluntary arrangement, ">
         <title>Make Me Debt Free</title>
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Bootstrap icons-->
@@ -17,6 +18,7 @@
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
         <link href="css/custom-des.css" rel="stylesheet"/>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     </head>
     <body id="page-top">
         <!-- Navigation-->
@@ -35,44 +37,54 @@
                     <a class="btn btn-primary rounded-pill px-3 mb-2 mb-lg-0" href="/#contact">
                         <span class="d-flex align-items-center">
                             <i class="bi-phone me-2"></i>
-                            <span class="small">Book a call</span>
+                            <span class="">Book a call</span>
                         </span>
                     </a>
                 </div>
             </div>
         </nav>
-        <!-- App features section-->
-        <section id="features">
+        <!-- Basic features section-->
+        <section class="bg-light">
+            <h1 class="display-3 text-center bg-gradient-primary-to-secondary p-5 text-white">Protected Trust Deed</h1>
             <div class="container px-5">
-                <div class="row gx-5 align-items-center">
-                    <div class="col-lg-8 order-lg-1 mb-5 mb-lg-0 mx-auto">
-                        <div class="container-fluid px-5">
-                            <div class="row gx-5">
-                                <div class="col mt-5 mb-5">
-                                    <!-- Feature item-->
-                                    <div class="text-center">
-                                        <h1><i class="bi-check-circle icon-feature text-gradient d-block mb-3" height="9rem"></i></h1>
-                                        <h3 class="font-alt">Great! You have successfully booked a call.</h3>
-                                        <p class="text-muted mb-0">You will get a call from one of our experts.</p>
-                                    </div>
-                                </div>
-                            </div>
+                <p class=" lead fw-normal text-center text-muted mb-5">You can make affordable payments over four years and after this time any remaining debts are written off.</p>
+                <div class="row gx-5 align-items-start justify-content-center justify-content-lg-between">
+                    <p>A protected trust deed is a legally binding arrangement in Scotland where you make reduced payments over 4 years. At the end of this time, your unsecured debts are usually written off.</p>
+
+                    <p>A trust deed is a form of insolvency, so your unsecured debts need to outweigh the value of your assets, such as a house or vehicles. Unsecured debts include things like credit card debt, personal loans and store cards.</p>
+                    <p>Trust deeds are only available if you live in Scotland. If you live in England, Wales or Northern Ireland, an Individual voluntary arrangement (IVA) is a similar solution, but it's important to note that it has different benefits, risks and fees associated with it.</p>
+                    
+                    <div class="col-12 col-lg-6">
+                        <h3 class="display-6">Benefits of a Trust Deed</h3>
+                        <ul class="fw-normal mb-5 mb-lg-0">
+                            <li>With the help of an Insolvency Practitioner (IP) you arrange repayments to your creditors over 4 years. After this any remaining debt is written off</li>
+                            <li>Once your trust deed is approved, your creditors won't chase you for payment or add more interest and charges to your debts, and they can't take any court action</li>
+                            <li>While you may have to sell some assets, you're usually able to keep one essential vehicle worth less than £3,000</li>
+                            <li>Although a protected trust deed is a formal debt solution, you don't need to appear in court</li>
+                        </ul>
+                    </div>
+                    <div class="col-12 col-lg-6">
+                        <h3 class="display-6">Risks of a Trust Deed</h3>
+                        <ul class="fw-normal mb-5 mb-lg-0">
+                            <li>An Insolvency Practitioner normally takes a charge for their service out of your monthly repayment for your trust deed, so it's important you understand what percentage this will be</li>
+                            <li>A trust deed may affect the terms of your employment; if you're concerned about this you should check your contract or speak to your HR department</li>
+                            <li>There's the risk of bankruptcy if your trust deed fails</li>
+                            <li>Your credit rating will be affected for six years, starting from the date the arrangement is agreed</li>
+                        </ul>
+                    </div>
+                    <div class="row mt-4 justify-content-center align-items-center">
+                        <p class="lead text-center fw-normal">Still got doubts? Get an expert advice. Book a call now!</p>
+                        <div class="col-3 text-center">
+                            <a class="btn btn-primary rounded-pill px-3 mb-2 mb-lg-0" href="/#contact">
+                                <span class="d-flex align-items-center">
+                                    <span class="lead fw-normal">Book a call</span>
+                                </span>
+                            </a>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
-        <!-- Mashead header-->
-        <!-- Quote/testimonial aside-->
-        <aside class="text-center bg-gradient-primary-to-secondary">
-            <div class="container px-5">
-                <div class="row gx-5 justify-content-center">
-                    <div class="col-xl-11">
-                        <img src="assets/img/mmdf.png" alt="Make Mee Debt Free Logo" style="height: 6rem" />
-                    </div>
-                </div>
-            </div>
-        </aside>
         <!-- Footer-->
         <footer class="bg-black py-5">
             <div class="container px-5">
